--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@next/eslint-plugin-next": "14.0.1",
     "bcrypt": "^5.1.1",
     "mongoose": "^8.2.1",
-    "next": "14.0.1",
+    "next": "^14.1.3",
     "next-auth": "^5.0.0-beta.3",
     "react": "18",
     "react-dom": "18",
